# tower

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  tower_dump.json
resume/: admin.py  models.py  tests.py  tests_resume.py  urls.py  views.py
resume/migrations/: 0001_initial.py  0002_rename_projects_project.py  0003_project_image.py  0004_education_language_skill.py  0005_language_start_date_skill_description.py  0006_education_award.py  0007_education_still_in_progress_experience_is_seasonal_and_more.py  0008_rename_discipline_education_course.py  0009_project_repository.py  0010_alter_bio_bio_alter_bio_skills_alter_bio_summary_and_more.py
resume/templates/resume/: about.html  projects.html  resume.html
static_general/css/: custom.css
templates/: base.html
templates/base/: contact.html  index.html  projects.html
templates/registration/: login.html
tower/: asgi.py  settings.py  urls.py  wsgi.py
tracker/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_alter_prescription_end_date_and_more.py  0003_prescription_total_dosage_unit_quantity_and_more.py  0004_prescription_is_quitted_and_more.py  0005_prescriptionreminder_prescribed_time.py
tracker/static/tracker/: custom.css  home.css  styles.css
tracker/templates/tracker/: add_prescription.html  base.html  dashboard.html  index.html  register.html  reminder.html  update.html  update_prescription.html
