[tool.poetry]
name = "tower"
version = "0.1.0"
description = "Personal portfolio"
authors = ["Olaide Alaka <alaka1olaide@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.1"
django-crispy-forms = "2.0"
pillow = "9.5.0"
python-decouple = "3.8"
model-bakery = "1.12.0"
pytest-cov = "4.1.0"
isort = "5.12.0"
black = "23.3.0"
django-q = "1.3.9"
coverage = "7.2.7"
pytest-django = "4.5.2"
redis = "3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tower.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]


[tool.isort]
skip_glob = ["docs/*", "htmlcov/*", "towerenv/*", "tracker/migrations/*", 
"resume/migrations/*"]

extend_skip = [".md", ".json", "wip*"]

#to avoid conflict with black
profile = "black"